<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".view.fragment.TarefasFragment">


    <TextView
        android:id="@+id/text_data"
        android:text="@string/hoje"
        android:textSize="30sp"
        android:layout_margin="14dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_candario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/data"
        app:icon="@drawable/ic_calendar"
        app:layout_constraintEnd_toStartOf="@+id/btn_anterior"
        app:layout_constraintTop_toTopOf="@id/text_data" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_anterior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passadas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_data" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tarefas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_data" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_new_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_add"
        app:tint="@color/white"
        android:contentDescription="@string/new_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>