<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layout_item"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_marginBottom="6dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_classificacao"
            android:text="@string/_1"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_margin="4dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circle_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/padrao" />

        <LinearLayout
            android:id="@+id/linear_texts"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/nome"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/text_subtitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/text_pontuacao"
                android:textStyle="bold"/>
        </LinearLayout>


    </LinearLayout>

<include layout="@layout/divider"/>

</LinearLayout>